WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209263
SharedMemory::Handle::decode shouldn't check rounded size
https://bugs.webkit.org/show_bug.cgi?id=209263
Summary
SharedMemory::Handle::decode shouldn't check rounded size
Saam Barati
Reported
2020-03-18 18:37:16 PDT
...
Attachments
patch
(1.67 KB, patch)
2020-03-18 18:50 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2020-03-18 18:50:01 PDT
Created
attachment 393936
[details]
patch
EWS
Comment 2
2020-03-18 20:07:10 PDT
Committed
r258677
: <
https://trac.webkit.org/changeset/258677
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 393936
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-03-18 20:08:16 PDT
<
rdar://problem/60615556
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug