SharedMemory::Handle::decode shouldn't check rounded size https://bugs.webkit.org/show_bug.cgi?id=209263

Reviewed by Sam Weinig.

* Platform/cocoa/SharedMemoryCocoa.cpp:
(WebKit::SharedMemory::Handle::decode):
(WebKit::SharedMemory::map):


Canonical link: https://commits.webkit.org/222190@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258677 268f45cc-cd09-0410-ab3c-d52691b4dbfc