Source/WebKit/Platform/cocoa/SharedMemoryCocoa.cpp
@@ -93,8 +93,6 @@ bool SharedMemory::Handle::decode(IPC::Decoder& decoder, Handle& handle)
     uint64_t size;
     if (!decoder.decode(size))
         return false;
-    if (size != round_page(size))
-        return false;
 
     IPC::MachPort machPort;
     if (!decoder.decode(machPort))
@@ -193,8 +191,6 @@ RefPtr<SharedMemory> SharedMemory::map(const Handle& handle, Protection protecti
 {
     if (handle.isNull())
         return nullptr;
-
-    ASSERT(round_page(handle.m_size) == handle.m_size);
 
     vm_prot_t vmProtection = machProtection(protection);
     mach_vm_address_t mappedAddress = 0;
